--- a/20220518tomita/css/news.css
+++ b/20220518tomita/css/news.css
@@ -62,6 +62,21 @@ body {
 
 /*---------------------news--------------------- */
 
+.common__ttl {
+  background: url(../img/mv.png) no-repeat;
+  background-size: cover;
+  height: 100vh;
+  color: white;
+}
+
+
+
+.news__ttl {
+  position: absolute;
+  top: 40%;
+  left: 50%;
+}
+
 #news {
   background: black;
 }
@@ -71,13 +86,13 @@ body {
   margin-top: 10vh;
 }
 
-#news .news__list-item {
-  color: black;
-  background-color: white;
+.news__list-item {
   margin-top: 3vh;
+  border: 1px solid black;
+  padding: 1vh;
 }
 
-#news .news__list-item:last-of-type {
+.news__list-item:last-of-type {
   margin-bottom: 3vh;
 }
 
@@ -85,16 +100,6 @@ body {
   font-weight: bold;
 }
 
-.news__btn {
-  display: block;
-  margin: 10vh auto 0;
-  width: 30vw;
-  text-align: center;
-  padding: 5vh 0;
-  background: #cc1231;
-  color: white;
-  transition: 0.4s;
-}
 
 /*---------------------contact--------------------- */
 #contact {
