--- a/20220518tomita/css/company.css
+++ b/20220518tomita/css/company.css
@@ -113,3 +113,50 @@ tr{
   color: white;
   transition: 0.4s;
 }
+
+/*---------------------footer--------------------- */
+
+.footer {
+  text-decoration: none;
+  width: 100%;
+  background-color: black;
+  padding: 5vh 0;
+  text-align: center;
+}
+
+.footer-inner {
+  display: flex;
+  justify-content: space-between;
+  padding: 0 5vw;
+}
+
+.copyright {
+  font-size: 1vw;
+  color: white;
+}
+
+.footer-nav-list {
+  display: flex;
+  width: 100%;
+  justify-content: center;
+  font-size: 2.5vw;
+  margin-bottom: 10vh;
+  color: white;
+
+}
+
+.footer-nav-item {
+  font-size: 2.5vh;
+  border-right: 1px solid white;
+  border-left: 1px solid white;
+  margin: auto 1vw;
+  padding: auto 0.5vw;
+}
+
+.footer-nav-a {
+  color: white;
+}
+
+.footer-nav-list li:last-child {
+  margin-right: 0;
+}
