--- a/20220518tomita/css/index.css
+++ b/20220518tomita/css/index.css
@@ -36,9 +36,15 @@ body{
 /*---------------------header--------------------- */
 
 .header{
+  position: fixed;
   height: 10vh;
   line-height: 10vh;
   color: black;
+  margin: 0;
+  width: 100%;
+  background-color: white;
+  z-index: 10;
+
 }
 
 .header__logo{
@@ -67,10 +73,11 @@ body{
 
 /*---------------------firstview--------------------- */
 .firstview__background{
-  position: relative;   
+  position: relative;
   background: url(../img/mv.png) no-repeat;
   background-size: cover;
   height: 100vh;
+  z-index: 0;
 }
 
 .firstview__content{
