--- a/20220518tomita/css/index.css
+++ b/20220518tomita/css/index.css
@@ -37,9 +37,9 @@ body{
 
 .header{
   position: fixed;
+  position: relative;
   height: 10vh;
   line-height: 10vh;
-  color: black;
   margin: 0;
   width: 100%;
   background-color: white;
@@ -54,12 +54,12 @@ body{
 
 .header-nav{
   margin-right: 5vw;
-  color: black;
 }
 
 .header-nav-a{
   color: black;
 }
+
 
 .header-nav-list li{
   margin-left: 2vw;
@@ -69,6 +69,85 @@ body{
 
 .header-nav-list li:last-child{
   margin-right: 0;
+}
+
+.nav {
+  position: absolute;
+  height: 100vh;
+  width: 100%;
+  left: -100%;
+  background: #eee;
+  transition: .7s;
+  text-align: center;
+}
+
+.nav ul {
+  padding-top: 80px;
+}
+
+.nav ul li {
+  list-style-type: none;
+  margin-top: 50px;
+}
+
+.menu {
+  display: none;
+  width: 6vw;
+  height: 6vh;
+  cursor: pointer;
+  position: relative;
+  left: -5vw;
+  top: 3vh;
+}
+
+.menu__line--top,
+.menu__line--middle,
+.menu__line--bottom {
+  display: inline-block;
+  width: 100%;
+  height: 4px;
+  background-color: #000;
+  position: absolute;
+  transition: 0.5s;
+}
+
+.menu__line--top {
+  top: 0;
+}
+
+.menu__line--middle {
+  top: 14px;
+}
+
+.menu__line--bottom {
+  bottom: 0;
+}
+
+.menu.open span:nth-of-type(1) {
+  top: 14px;
+  transform: rotate(45deg);
+}
+
+.menu.open span:nth-of-type(2) {
+  opacity: 0;
+}
+
+.menu.open span:nth-of-type(3) {
+  top: 14px;
+  transform: rotate(-45deg);
+}
+
+.in{
+  transform: translateX(100%);
+}
+
+@media screen and (max-width:767px){
+  .header-nav{
+    display: none;
+  }
+  .menu{
+    display: inline-block;
+  }
 }
 
 /*---------------------firstview--------------------- */
