--- a/20220518tomita/css/service.css
+++ b/20220518tomita/css/service.css
@@ -32,23 +32,38 @@ body {
   font-weight: bold;
   position: relative;
 }
+.padding__height {
+  padding-top: 70px;
+  padding-bottom: 70px;
+}
+
 
 /*---------------------header--------------------- */
 
 .header {
-  height: 10vh;
-  line-height: 10vh;
+  position: fixed;
+  height: 70px;
+  line-height: 70px;
+  margin: 0;
+  width: 100%;
+  background-color: white;
+  z-index: 10;
+
 }
 
 .header__logo {
-  width: 5vw;
-  margin-left: 12vw;
+  width: 60px;
+  margin-left: 20px;
 }
 
 .header-nav {
   margin-right: 5vw;
+}
+
+.header-nav-a {
   color: black;
 }
+
 
 .header-nav-list li {
   margin-left: 2vw;
@@ -59,11 +74,91 @@ body {
 .header-nav-list li:last-child {
   margin-right: 0;
 }
+
+.nav {
+  position: absolute;
+  height: 100vh;
+  width: 100%;
+  left: -100%;
+  background: #eee;
+  transition: .7s;
+  text-align: center;
+}
+
+.nav ul {
+  padding-top: 80px;
+}
+
+.nav ul li {
+  list-style-type: none;
+  margin-top: 50px;
+}
+
+.menu {
+  display: none;
+  width: 6vw;
+  height: 6vh;
+  cursor: pointer;
+  position: relative;
+  left: -5vw;
+  top: 3vh;
+}
+
+.menu__line--top,
+.menu__line--middle,
+.menu__line--bottom {
+  display: inline-block;
+  width: 100%;
+  height: 4px;
+  background-color: #000;
+  position: absolute;
+  transition: 0.5s;
+}
+
+.menu__line--top {
+  top: 0;
+}
+
+.menu__line--middle {
+  top: 14px;
+}
+
+.menu__line--bottom {
+  bottom: 0;
+}
+
+.menu.open span:nth-of-type(1) {
+  top: 14px;
+  transform: rotate(45deg);
+}
+
+.menu.open span:nth-of-type(2) {
+  opacity: 0;
+}
+
+.menu.open span:nth-of-type(3) {
+  top: 14px;
+  transform: rotate(-45deg);
+}
+
+.in {
+  transform: translateX(100%);
+}
+
+@media screen and (max-width:767px) {
+  .header-nav {
+    display: none;
+  }
+
+  .menu {
+    display: inline-block;
+  }
+}
 /*---------------------service--------------------- */
 .common__ttl {   
   background: url(../img/mv.png) no-repeat;
   background-size: cover;
-  height: 100vh;
+  height: 300px;
   color: white;
 }
 
@@ -71,13 +166,16 @@ body {
 
 .service__ttl{
   position: absolute;
-  top: 40%;
+  top: 50%;
   left: 50%;
+  transform: translate(-50%,-50%);
+  text-align: center;
+  font-size: 50px;
 }
 
 .service__item{
   border-top: 1px solid black;
-  padding: 1vh auto;
+  padding: 20px 0 ;
 }
 
 .service__item:last-of-type{
@@ -86,13 +184,17 @@ body {
 }
 
 
-.service__item-img{
-  width: 30vw;
+.service__item-img img{
+  width: 300px;
 }
 
 .service__item-ttl{
   font-size: 3vh;
   font-weight: bold;
+}
+
+.service__item-content{
+  padding: 0 30px;
 }
 
 /*---------------------contact--------------------- */
