--- a/20220518tomita/css/blog.css
+++ b/20220518tomita/css/blog.css
@@ -4,8 +4,8 @@ img {
 }
 
 a {
+  color: black;
   text-decoration: none;
-
 }
 
 li {
@@ -15,6 +15,7 @@ li {
 body {
   color: black;
   line-height: 1.7;
+  font-family: sans-serif;
 }
 
 .flex__item {
@@ -33,17 +34,26 @@ body {
   position: relative;
 }
 
-/*---------------------header--------------------- */
+.padding__height {
+  padding-top: 70px;
+  padding-bottom: 70px;
+}
 
+/*---------------------header--------------------- */
 .header {
-  height: 10vh;
-  line-height: 10vh;
-  color: black;
+  position: fixed;
+  height: 70px;
+  line-height: 70px;
+  margin: 0;
+  width: 100%;
+  background-color: white;
+  z-index: 10;
+
 }
 
 .header__logo {
-  width: 5vw;
-  margin-left: 12vw;
+  width: 60px;
+  margin-left: 20px;
 }
 
 .header-nav {
@@ -53,6 +63,7 @@ body {
 .header-nav-a {
   color: black;
 }
+
 
 .header-nav-list li {
   margin-left: 2vw;
@@ -64,12 +75,106 @@ body {
   margin-right: 0;
 }
 
+.nav {
+  position: absolute;
+  height: 600px;
+  width: 100%;
+  left: -100%;
+  background: #eee;
+  transition: .7s;
+  text-align: center;
+}
+
+.nav-nav {
+  color: black;
+  margin: 0 auto;
+}
+
+.nav ul {
+  padding-top: 80px;
+}
+
+.nav ul li {
+  list-style-type: none;
+  margin-top: 0;
+}
+
+.menu {
+  display: none;
+  width: 6vw;
+  height: 6vh;
+  cursor: pointer;
+  position: relative;
+  left: -5vw;
+  top: 3vh;
+}
+
+.menu__line--top,
+.menu__line--middle,
+.menu__line--bottom {
+  display: inline-block;
+  width: 100%;
+  height: 4px;
+  background-color: #000;
+  position: absolute;
+  transition: 0.5s;
+}
+
+.menu__line--top {
+  top: 0;
+}
+
+.menu__line--middle {
+  top: 14px;
+}
+
+.menu__line--bottom {
+  bottom: 0;
+}
+
+.menu.open span:nth-of-type(1) {
+  top: 14px;
+  transform: rotate(45deg);
+}
+
+.menu.open span:nth-of-type(2) {
+  opacity: 0;
+}
+
+.menu.open span:nth-of-type(3) {
+  top: 14px;
+  transform: rotate(-45deg);
+}
+
+.in {
+  transform: translateX(100%);
+}
+
+@media screen and (max-width:767px) {
+  .header-nav {
+    display: none;
+  }
+
+  .menu {
+    display: inline-block;
+  }
+}
+
 /*---------------------blog--------------------- */
 .common__ttl {
-  background: url(../img/mv.png) no-repeat;
+  background: url(../img/mv.png) center no-repeat;
   background-size: cover;
-  height: 50%;
+  height: 350px;
   color: white;
+}
+
+.blog1__ttl {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  text-align: center;
+  font-size: 30px;
 }
 
 #blog .container {
@@ -87,7 +192,12 @@ body {
 
 .blog-wrap{
   display: flex;
-  flex-wrap: wrap-reverse;
+  flex-wrap: wrap;
+}
+
+.blog-wrap__item:hover{
+  opacity: 0.5;
+  transition:0.4s;
 }
 
 /*---------------------contact--------------------- */
@@ -102,11 +212,128 @@ body {
 
 .contact__btn {
   display: block;
-  margin: 10vh auto 0;
-  width: 30vw;
+  margin: 40px auto 0;
+  width: 300px;
   text-align: center;
-  padding: 5vh 0;
+  padding: 10px 0;
   background: #cc1231;
   color: white;
   transition: 0.4s;
+  font-weight: bold;
+}
+
+.contact__btn:hover {
+  background: #cc1231;
+  color: white;
+  opacity: 0.5;
+}
+
+/*---------------------footer--------------------- */
+
+.footer {
+  text-decoration: none;
+  width: 100%;
+  background-color: #1a1a1a;
+  text-align: center;
+  height: 70px;
+  padding-top: 20px;
+}
+
+.footer-inner {
+  display: flex;
+  justify-content: space-between;
+  padding: 0, 0.5vw;
+  line-height: 8px;
+}
+
+.copyright {
+  font-size: 1vw;
+  color: white;
+}
+
+.footer-nav-list {
+  display: flex;
+  width: 100%;
+  justify-content: center;
+  color: white;
+
+}
+
+.footer-nav-item {
+  font-size: 10px;
+  border-right: 1px solid white;
+  border-left: 1px solid white;
+  padding: 10px 20px;
+}
+
+.footer-nav-item:not(:last-of-type) {
+  border-right: 1px solid white;
+}
+
+.footer-nav-item:not(:first-of-type) {
+  border-left: 1px solid white;
+}
+
+.footer-nav-item:hover {
+  opacity: 0.5;
+}
+
+.footer-nav-a {
+  color: white;
+}
+
+.footer-nav-list li:last-child {
+  margin-right: 0;
+}
+
+.footer-nav-item:last-of-type {
+  border: none;
+}
+
+.footer-nav-item:first-of-type {
+  border: none;
+}
+
+.footer-inner-min {
+  display: none;
+}
+
+
+
+@media screen and (max-width:767px) {
+  .footer {
+    height: 150px;
+    margin-bottom: 0;
+  }
+
+  .footer-inner-min {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    align-items: center;
+    font-size: 12px;
+    height: 100%;
+  }
+
+  .copyright {
+    margin: auto 60px;
+  }
+
+  .footer-nav-list-min {
+    margin: auto 80px;
+  }
+
+  .wrap {
+    margin: 0 auto;
+  }
+
+  .footer-inner {
+    display: none;
+  }
+}
+
+@media screen and (max-width:1500px) {
+  .footer-inner-min .wrap {
+    display: none;
+  }
 }
