--- a/20220518tomita/css/index.css
+++ b/20220518tomita/css/index.css
@@ -15,6 +15,7 @@ li {
 body{
   color: black;
   line-height: 1.7;
+  font-family:-apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif
 }
 
 .flex__item{
@@ -79,7 +80,7 @@ body{
 
 .nav {
   position: absolute;
-  height: 500px;
+  height: 600px;
   width: 100%;
   left: -100%;
   background: #eee;
@@ -174,14 +175,15 @@ body{
   position: absolute;
   top: 50%;
   left: 50%;
-  width: 80 0px;
+  width: 800px;
   transform: translate(-50%,-50%);
   text-align: center;
   color: white;
 }
 
 h1{
-  font-size: 45px;
+  font-size: 40px;
+  font-weight: 00;
 }
 .firstview_content-eyecatvh{
   font-size: 200px;
@@ -468,11 +470,16 @@ h1{
   border: none;
 }
 
+.footer-inner-min{
+  display: none;
+}
+
 
 
 @media screen and (max-width:767px) {
-.footer{
-    height: 200px;
+  .footer{
+    height: 150px;
+    margin-bottom: 0;
   }
 
   .footer-inner-min {
@@ -481,38 +488,28 @@ h1{
     justify-content: space-between;
     align-items: center;
     font-size: 12px;
+    height: 100%;
   }
 
-.copyright{
-  margin: auto 60px;
-}
+  .copyright{
+    margin: auto 60px;
+  }
 
-.footer-nav-list-min{
-  margin: auto 80px;
-}
+  .footer-nav-list-min{
+    margin: auto 80px;
+  }
 
   .wrap {
     margin: 0 auto;
   }
 
-.footer-inner{
-  display: none;
-}
-
-@media screen and (min-width:768px){
-  .footer-inner-min {
-  display: none;
-}
-
-@media screen and (max-width:766) {
-  .footer-inner-min {
-    display: flex;
-    flex-wrap: wrap;
-    align-items: center;
-    font-size: 12px;
+  .footer-inner{
+    display: none;
   }
-  
-  .footer-nav-list-min .copyright{
-    display: inline-block;
+}
+
+@media screen and (max-width:1500px) {
+  .footer-inner-min .wrap {
+    display: none;
   }
 }
