--- a/20220518tomita/css/news.css
+++ b/20220518tomita/css/news.css
@@ -15,6 +15,7 @@ li {
 body {
   color: black;
   line-height: 1.7;
+  font-family: sans-serif;
 }
 
 .flex__item {
@@ -33,28 +34,60 @@ body {
   position: relative;
 }
 
-/*---------------------header--------------------- */
+.padding__height {
+  padding-top: 70px;
+  padding-bottom: 70px;
+}
 
+/*---------------------header--------------------- */
 .header {
-  height: 10vh;
-  line-height: 10vh;
+  position: fixed;
+  height: 70px;
+  line-height: 70px;
+  margin: 0;
+  width: 100%;
+  background-color: white;
+  z-index: 10;
+
 }
 
 .header__logo {
-  width: 5vw;
-  margin-left: 12vw;
+  width: 60px;
+  margin-left: 20px;
 }
 
 .header-nav {
   margin-right: 5vw;
+}
+
+.header-nav-a {
   color: black;
+}
+
+
+.header-nav-list li {
+  margin-left: 2vw;
+  display: inline-block;
+  font-weight: bold;
+}
+
+.header-nav-list li:last-child {
+  margin-right: 0;
+}
+
+.nav {
   position: absolute;
-  height: 100vh;
+  height: 600px;
   width: 100%;
   left: -100%;
   background: #eee;
   transition: .7s;
   text-align: center;
+}
+
+.nav-nav {
+  color: black;
+  margin: 0 auto;
 }
 
 .nav ul {
@@ -63,17 +96,17 @@ body {
 
 .nav ul li {
   list-style-type: none;
-  margin-top: 50px;
+  margin-top: 0;
 }
 
 .menu {
-  display: inline-block;
-  width: 36px;
-  height: 32px;
+  display: none;
+  width: 6vw;
+  height: 6vh;
   cursor: pointer;
   position: relative;
-  left: 20px;
-  top: 20px;
+  left: -5vw;
+  top: 3vh;
 }
 
 .menu__line--top,
@@ -117,31 +150,32 @@ body {
   transform: translateX(100%);
 }
 
-.header-nav-list li {
-  margin-left: 2vw;
-  display: inline-block;
-  font-weight: bold;
-}
+@media screen and (max-width:767px) {
+  .header-nav {
+    display: none;
+  }
 
-.header-nav-list li:last-child {
-  margin-right: 0;
+  .menu {
+    display: inline-block;
+  }
 }
 
 /*---------------------news--------------------- */
 
 .common__ttl {
-  background: url(../img/mv.png) no-repeat;
+  background: url(../img/mv.png) center no-repeat;
   background-size: cover;
-  height: 100vh;
+  height: 350px;
   color: white;
 }
 
-
-
 .news__ttl {
   position: absolute;
-  top: 40%;
+  top: 50%;
   left: 50%;
+  transform: translate(-50%,-50%);
+  text-align: center;
+  font-size: 30px;
 }
 
 #news {
@@ -154,9 +188,9 @@ body {
 }
 
 .news__list-item {
-  margin-top: 3vh;
+  margin-top: 10px;
   border: 1px solid black;
-  padding: 1vh;
+  padding: 20px;
 }
 
 .news__list-item:last-of-type {
@@ -174,8 +208,10 @@ body {
   text-align: center;
 }
 
-#contact.common__ttl {
+.contact__ttl {
   margin-top: 5vh;
+  font-size: 30px;
+  font-weight: bold;
 }
 
 .contact__btn {
@@ -187,4 +223,114 @@ body {
   background: #cc1231;
   color: white;
   transition: 0.4s;
+}
+
+/*---------------------footer--------------------- */
+
+.footer {
+  text-decoration: none;
+  width: 100%;
+  background-color: #1a1a1a;
+  text-align: center;
+  height: 70px;
+  padding-top: 20px;
+}
+
+.footer-inner {
+  display: flex;
+  justify-content: space-between;
+  padding: 0, 0.5vw;
+  line-height: 8px;
+}
+
+.copyright {
+  font-size: 1vw;
+  color: white;
+}
+
+.footer-nav-list {
+  display: flex;
+  width: 100%;
+  justify-content: center;
+  color: white;
+
+}
+
+.footer-nav-item {
+  font-size: 10px;
+  border-right: 1px solid white;
+  border-left: 1px solid white;
+  padding: 10px 20px;
+}
+
+.footer-nav-item:not(:last-of-type) {
+  border-right: 1px solid white;
+}
+
+.footer-nav-item:not(:first-of-type) {
+  border-left: 1px solid white;
+}
+
+.footer-nav-item:hover {
+  opacity: 0.5;
+}
+
+.footer-nav-a {
+  color: white;
+}
+
+.footer-nav-list li:last-child {
+  margin-right: 0;
+}
+
+.footer-nav-item:last-of-type {
+  border: none;
+}
+
+.footer-nav-item:first-of-type {
+  border: none;
+}
+
+.footer-inner-min {
+  display: none;
+}
+
+
+
+@media screen and (max-width:767px) {
+  .footer {
+    height: 150px;
+    margin-bottom: 0;
+  }
+
+  .footer-inner-min {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    align-items: center;
+    font-size: 12px;
+    height: 100%;
+  }
+
+  .copyright {
+    margin: auto 60px;
+  }
+
+  .footer-nav-list-min {
+    margin: auto 80px;
+  }
+
+  .wrap {
+    margin: 0 auto;
+  }
+
+  .footer-inner {
+    display: none;
+  }
+}
+
+@media screen and (max-width:1500px) {
+  .footer-inner-min .wrap {
+    display: none;
+  }
 }
